[package]
name = "claude_uploader"
version = "1.0.0"
edition = "2021"

[dependencies]
egui = "0.24"
eframe = "0.24"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "time"] }
rfd = "0.13.0"
ignore = "0.4"
open = "4.1"
